new file:   contrat/assurance/2380544245.txt 	new file:   contrat/assurance/4714132934.txt 	new file:   contrat/assurance/5551850989.txt 	new file:   contrat/assurance/6632841083.txt 	new file:   contrat/pret/268359117660487040.txt 	new file:   contrat/pret/413876365762307078.txt 	new file:   contrat/pret/625493724882256375.txt 	new file:   contrat/pret/697408826494683241.txt 	new file:   contrat/pret/806174432945589828.txt 	new file:   contrat/pret/995957405923072660.txt 	new file:   dataset/123.json 	new file:   dataset/123456.json 	new file:   dataset/123456789.json 	new file:   dataset/465486468.json 	new file:   dataset/524545.json 	new file:   dataset/654646.json 	modified:   loan_submission.log 	modified:   validation1/__pycache__/main.cpython-311.pyc 	modified:   validation1/main.py 	modified:   validation1/static/index.html 	modified:   verification4/main.py 	modified:   "\351\241\272\345\272\217.txt"

--- a/validation1/static/index.html
+++ b/validation1/static/index.html
@@ -35,11 +35,11 @@
   </style>
 </head>
 <body>
-  <h2>💬 AI 贷款申请助手</h2>
+  <h2>💬 Assistant de demande de prêt AI</h2>
   <div id="chat"></div>
   <div id="input-area">
-    <input id="message" type="text" size="70" placeholder="请输入您的信息..." />
-    <button onclick="sendMessage()">发送</button>
+    <input id="message" type="text" size="70" placeholder="Veuillez entrer votre message..." />
+    <button onclick="sendMessage()">Envoyer</button>
   </div>
 
   <script>
@@ -52,7 +52,7 @@
 
     ws.onmessage = function (event) {
       const contractText = event.data;
-      const fullMessage = `这是合同的内容，如果您确认，请回答“我同意”。\n\n${contractText}`;
+      const fullMessage = `Voici le contenu du contrat. Si vous confirmez, veuillez répondre "Je suis d'accord".\n\n${contractText}`;
       chatDiv.innerHTML += `<p><span class="bot">助理:</span> <pre style="white-space: pre-wrap">${fullMessage}</pre></p>`;
       chatDiv.scrollTop = chatDiv.scrollHeight;
     };
@@ -64,10 +64,10 @@
       chatDiv.innerHTML += `<p><span class="user">你:</span> ${message}</p>`;
       messageInput.value = "";
 
-      const confirmationWords = ["我同意", "yes", "确认", "accept"];
+      const confirmationWords = ["我同意", "yes", "确认", "accept", "ok", "好的",'oui',"Je suis d'accord"];
       if (confirmationWords.includes(message.toLowerCase())) {
         ws.send(message);  // 发送到 WebSocket 第四部分
-        chatDiv.innerHTML += `<p><span class="bot">助理:</span> 已收到您的确认，我们将尽快通过邮件发送合同。</p>`;
+        chatDiv.innerHTML += `<p><span class="bot">Assistant:</span> Confirmation reçue, nous vous enverrons le contrat par e-mail dès que possible.</p>`;
         chatDiv.scrollTop = chatDiv.scrollHeight;
         return;
       }
@@ -79,7 +79,7 @@
         body: JSON.stringify({ user_id: userId, message })
       });
       const data = await res.json();
-      chatDiv.innerHTML += `<p><span class="bot">助理:</span> ${data.reply}</p>`;
+      chatDiv.innerHTML += `<p><span class="bot">Assistant:</span> ${data.reply}</p>`;
       chatDiv.scrollTop = chatDiv.scrollHeight;
     }
 
