deleted:    BPM-TD5.pdf 	new file:   README.md 	deleted:    Rapport.pdf 	deleted:    contrat/assurance/4714132934.txt 	deleted:    contrat/assurance/5551850989.txt 	renamed:    contrat/assurance/2380544245.txt -> contrat/assurance/6341613805.txt 	deleted:    contrat/assurance/6632841083.txt 	deleted:    contrat/pret/268359117660487040.txt 	renamed:    contrat/pret/995957405923072660.txt -> contrat/pret/332174259851115010.txt 	deleted:    contrat/pret/413876365762307078.txt 	deleted:    contrat/pret/625493724882256375.txt 	deleted:    contrat/pret/697408826494683241.txt 	deleted:    contrat/pret/806174432945589828.txt 	renamed:    dataset/123.json -> dataset/1234.json 	deleted:    dataset/123456.json 	deleted:    dataset/123456789.json 	deleted:    dataset/465486468.json 	deleted:    dataset/524545.json 	deleted:    dataset/654646.json 	modified:   loan_submission.log 	modified:   validation1/__pycache__/main.cpython-311.pyc 	modified:   validation1/main.py 	modified:   validation1/static/index.html 	modified:   verification4/__pycache__/main.cpython-311.pyc 	modified:   verification4/main.py 	modified:   "\351\241\272\345\272\217.txt"

--- a/validation1/static/index.html
+++ b/validation1/static/index.html
@@ -2,7 +2,7 @@
 <html lang="zh">
 <head>
   <meta charset="UTF-8" />
-  <title>AI 贷款助理</title>
+  <title>Assistant de demande de prêt AI</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -53,7 +53,7 @@
     ws.onmessage = function (event) {
       const contractText = event.data;
       const fullMessage = `Voici le contenu du contrat. Si vous confirmez, veuillez répondre "Je suis d'accord".\n\n${contractText}`;
-      chatDiv.innerHTML += `<p><span class="bot">助理:</span> <pre style="white-space: pre-wrap">${fullMessage}</pre></p>`;
+      chatDiv.innerHTML += `<p><span class="bot">Assistant:</span> <pre style="white-space: pre-wrap">${fullMessage}</pre></p>`;
       chatDiv.scrollTop = chatDiv.scrollHeight;
     };
 
@@ -64,7 +64,7 @@
       chatDiv.innerHTML += `<p><span class="user">你:</span> ${message}</p>`;
       messageInput.value = "";
 
-      const confirmationWords = ["我同意", "yes", "确认", "accept", "ok", "好的",'oui',"Je suis d'accord"];
+      const confirmationWords = [ "yes", "Je suis d'accord"];
       if (confirmationWords.includes(message.toLowerCase())) {
         ws.send(message);  // 发送到 WebSocket 第四部分
         chatDiv.innerHTML += `<p><span class="bot">Assistant:</span> Confirmation reçue, nous vous enverrons le contrat par e-mail dès que possible.</p>`;
